--- a/css/app.css
+++ b/css/app.css
@@ -84,6 +84,17 @@ h1 {
 /*
  * Styles for the Score Panel
  */
+ 
+button{ 
+background-color: black;
+text-decoration:none;
+min-width: 36px
+min-height: 30px;
+}
+button a{
+    text-decoration: none;
+    color:white;
+} 
 
 .score-panel {
     text-align: left;
